practice/terminal_command.txt
/*v4*/
 main_v4.cpp Led.cpp -g
 .\a.exe
gdb a.exe  
start
disassemble /s
quit

/*v5*/
g++ main_v5.cpp Led.cpp Date.cpp -g
/*v6*/
c++ insight 
g++ main_v6.cpp Ledv6.cpp Date.cpp  -o outputv6

main_v6.cpp: In function 'int main()':
main_v6.cpp:10:9: error: use of deleted function 'Led::Led()'
   10 |     Led ledblack;
      |         ^~~~~~~~
In file included from main_v6.cpp:2:
Ledv6.hpp:10:5: note: declared here
   10 |     Led()=delete; //delete to prevent use that constructor and generate error
/*v7*/
g++ main_v7.cpp Ledv7.cpp   -o outputv6

error: assignment of read-only member 'Led::x'
   11 |     this->x=x;


Ledv7.hpp:16:15: note: 'const int Led::x' should be initialized
   16 |     const int x;

Ledv7.cpp:6:6: error: assignment of read-only member 'Led::x'
    6 |     x=50;

main_v7.cpp: In function 'int main()':
main_v7.cpp:12:19: error: passing 'const Led' as 'this' argument discards qualifiers [-fpermissive]
   12 |     ledgreen.print();    


/*v8*/
g++ main_v8.cpp Ledv8.cpp Date.cpp  -o outputv8

when try to intialize and define static at the same time 
Ledv8.hpp:13:16: error: ISO C++ forbids in-class initialization of non-const static member 'Led::Number'
   13 |     static int Number=99;

when try access private or busblic member is tatic method related to the class 
but can acces static member
edv8.cpp: In static member function 'static void Led::sayHello(int)':
Ledv8.cpp:21:5: error: invalid use of member 'Led::pin_count' in static member function
   21 |     pin_count=50;

/*v9*/

main_v9.cpp:8:12: note:   'LCD' is not derived from 'std::__cxx11::basic_string<_CharT, _Traits, _Allocator>'
    8 |     l1 =l1+msg;   
    
g++ main_v9.cpp LCDv9.cpp   -o outputv9


/*v10*/
ain_v10.cpp:24:13: error: no match for 'operator<' (operand types are 'Segment' and 'int')
   24 |     if(seg1 <9 )
      |        ~~~~ ^~
      |        |     |
      |        Segment
g++ main_v10.cpp LCDv10.cpp Segment.cpp  -o outputv10
